--- a/website/docs/query-client/getQueryData.mdx
+++ b/website/docs/query-client/getQueryData.mdx
@@ -11,20 +11,17 @@ The method enables direct access to the `QueryClient` cache to retrieve the data
 See the TanStack [_queryClient.getQueryData 🌴_](https://tanstack.com/query/latest/docs/reference/QueryClient#queryclientgetquerydata) documentation.
 
 ```ts
-const data = qraft.<service>.<operation>.getQueryData(
-  parameters,
-  queryClient
+const data = api.<service>.<operation>.getQueryData(
+  parameters
 );
 ```
 
 ## Arguments
 
-1. `parameters: { path, query, header } | QueryKey`
+1. `parameters: { path, query, header } | QueryKey | void`
    - **Required** parameters to retrieve the data from the _Query Cache_.
-   - Instead of an object with `{path, query, header}`, you can pass a `QueryKey` as an array
+   - Instead of an object with `{ path, query, header }`, you can pass a `QueryKey` as an array
      which is also strictly-typed ✨
-2. `queryClient: QueryClient`
-   - **Required** `QueryClient` instance to use
 
 ## Returns
 The data from the _Query Cache_ for the specific query, strictly-typed ✨
@@ -34,24 +31,21 @@ The data from the _Query Cache_ for the specific query, strictly-typed ✨
 <Tabs>
   <TabItem value="parameters" label="Parameters">
     ```tsx
-    const pet = qraft.pet.getPetById.getQueryData(
-      {
-        path: { petId: 123 },
-      },
-      queryClient
-    );
+    const pet = api.pet.getPetById.getQueryData({
+      path: { petId: 123 },
+    });
 
     expect(pet?.id).toEqual(123);
     ```
   </TabItem>
   <TabItem value="query-key" label="QueryKey">
     ```tsx
-    const pet = qraft.pet.getPetById.getQueryData(
+    const pet = api.pet.getPetById.getQueryData(
       [
-        { method: 'get', url: '/pet/{petId}' },
+        { method: 'get', url: '/pet/{petId}', infinite: false, },
         { petId: 123 },
       ],
-      queryClient
+      {}
     );
 
     expect(pet?.id).toEqual(123);
