--- a/website/docs/query-client/isFetching.mdx
+++ b/website/docs/query-client/isFetching.mdx
@@ -17,8 +17,7 @@ guide for more information.
 
     ```ts
     qraft.<service>.<operation>.isFetching(
-      filters,
-      queryClient,
+      filters
     )
     ```
 
@@ -34,22 +33,13 @@ guide for more information.
        - `filters.predicate?: (query: Query) => boolean` will be used for filtering queries by custom predicate
        - _If not provided_
          - All queries for the specified endpoint will be checked
-    2. `queryClient: QueryClient`
-       - **Required** [_QueryClient 🌴_](https://tanstack.com/query/latest/docs/reference/QueryClient) to be used
   </TabItem>
   <TabItem value="without-filters" label={<span style={{verticalAlign: "middle"}}>Without <code>filters</code></span>}>
     Check _all_ normal and _Infinite_ queries for the specified endpoint.
 
     ```ts
-    qraft.<service>.<operation>.isFetching(
-      queryClient,
-    )
+    qraft.<service>.<operation>.isFetching()
     ```
-
-    ### Arguments
-
-    1. `queryClient: QueryClient`
-       - **Required** [_QueryClient 🌴_](https://tanstack.com/query/latest/docs/reference/QueryClient) to be used
   </TabItem>
 </Tabs>
 
@@ -81,8 +71,7 @@ guide for more information.
             entity_id: '3e3e-3e3e-3e3e',
           },
         },
-      },
-      queryClient
+      }
     );
 
     expect(numberOfFetchingEntities).toEqual(1);
@@ -103,7 +92,7 @@ guide for more information.
      * ###
      * ⬇︎ All queries for the specified endpoint will be used
      **/
-    const numberOfFetchingEntities = qraft.entities.getEntities.isFetching(queryClient);
+    const numberOfFetchingEntities = qraft.entities.getEntities.isFetching();
 
     expect(numberOfFetchingEntities).toEqual(2);
     ```
