docs: update install instructions for the next version

--- a/website/docs/getting-started/installation.mdx
+++ b/website/docs/getting-started/installation.mdx
@@ -8,8 +8,8 @@ Before you start using OpenAPI Qraft, you need to install the CLI tool to genera
 You also need to install the Qraft Client React package to use the generated API client.
 
 ```bash npm2yarn
-npm install -D @openapi-qraft/cli
-npm install @openapi-qraft/react
+npm install -D @openapi-qraft/cli@next
+npm install @openapi-qraft/react@next
 ```
 
 :::info Peer Dependency
