--- a/website/docs/overview.mdx
+++ b/website/docs/overview.mdx
@@ -90,8 +90,8 @@ hooks with strictly-typed parameters.
     **Installation**:
 
     ```bash npm2yarn
-    npm install @openapi-qraft/react
-    npm install -D @openapi-qraft/cli
+    npm install @openapi-qraft/react@next
+    npm install -D @openapi-qraft/cli@next
     # If you have not yet installed TanStack Query:
     npm install @tanstack/react-query
     ```
