--- a/website/versioned_docs/version-1.x/getting-started/quick-start.mdx
+++ b/website/versioned_docs/version-1.x/getting-started/quick-start.mdx
@@ -19,7 +19,7 @@ and also generate services that will use these types to interact with your API.
     Run the following command in the root directory of your project using your package manager.
 
     ```bash
-    npx @openapi-qraft/cli --plugin tanstack-query-react --plugin openapi-typescript \
+    npx @openapi-qraft/cli@next --plugin tanstack-query-react --plugin openapi-typescript \
       --output-dir src/api https://raw.githubusercontent.com/swagger-api/swagger-petstore/master/src/main/resources/openapi.yaml
     ```
   </TabItem>
