--- a/website/docs/hooks/useSuspenseInfiniteQuery.mdx
+++ b/website/docs/hooks/useSuspenseInfiniteQuery.mdx
@@ -32,6 +32,18 @@ const query = api.<service>.<operation>.useSuspenseInfiniteQuery(
      Hook
      - `queryOptions.queryFn` could be provided to override the default `queryFn` used by Qraft
 
+### Returns
+
+Same object as `UseInfiniteQueryResult` object, except that:
+
+- `data` is guaranteed to be defined
+- `isPlaceholderData` is missing
+- `status` is always success
+  - the derived flags are set accordingly.
+
+See the TanStack [_useSuspenseInfiniteQuery(...) 🌴_](https://tanstack.com/query/latest/docs/framework/react/reference/useSuspenseInfiniteQuery#:~:text=placeholderData-,Returns,-Same%20object%20as)
+documentation for more details.
+
 ### Examples
 
 ```tsx title="src/PostList.tsx"
