--- a/website/docs/codegen/CLI/cli.mdx
+++ b/website/docs/codegen/CLI/cli.mdx
@@ -98,13 +98,23 @@ npx openapi-qraft --plugin tanstack-query-react --plugin openapi-typescript http
     - `--operation-name-modifier 'post /files ==> createOne' 'put /posts ==> updateOne'` - will change all `POST` operations under `/files` to `createOne` and all `PUT` operations under `/posts` to `updateOne`.
 
 - **`--service-name-base <endpoint[<index>] | tags>`:** Use OpenAPI Operation `endpoint[<index>]` path part (e.g.: `/0/1/2`) or `tags` as the base name of the service. _(optional, default: `endpoint[0]`)_.
-  - Examples:
-    - `--service-name-base endpoint[0]` generates `services/FooService.ts` for the endpoint `/foo/bar/baz`
-    - `--service-name-base endpoint[1]` generates `services/BarService.ts` for the endpoint `/foo/bar/baz`
-    - `--service-name-base endpoint[3]` generates `services/BazService.ts` for the endpoint `/foo/bar/baz` _(if the endpoint is shorter than the index, the last part is used)_
-    - `--service-name-base tags` will generate services based on the OpenAPI Operation tags instead of the endpoint.
-      - If multiple tags are present for the operation, similar services will be created for each tag. Operation with `tags: [Foo, Bar]` will generate `services/FooService.ts` and `services/BarService.ts`.
-      - If there are no tags for the operation, the services will be created under the `default` tag. Operation with empty `tags: []` will generate `services/DefaultService.ts`.
+  - **`endpoint[<index>]`** - Use the path segment (e.g., `/0/1/2`) as the base name for the service.
+    - Examples:
+      - `--service-name-base endpoint[0]` generates `services/FooService.ts` for the endpoint `/foo/bar/baz`
+      - `--service-name-base endpoint[1]` generates `services/BarService.ts` for the endpoint `/foo/bar/baz`
+      - `--service-name-base endpoint[3]` generates `services/BazService.ts` for the endpoint `/foo/bar/baz` _(if the endpoint is shorter than the index, the last part is used)_
+      - If used `endpoint[<index>]` as the base name, operation names will be generated according to the specified index.
+        - For example:
+          - `--service-name-base endpoint[1]` for the endpoint `/api/bar` generates `get` operation name.
+          - `--service-name-base endpoint[1]` for the endpoint `/api/foo/bar` generates `getBar` operation name.
+  - **`tags`** - Use the OpenAPI Operation `tags` as the base name of the service.
+    - Examples:
+      - `--service-name-base tags` will generate services based on the OpenAPI Operation tags instead of the endpoint.
+        - If multiple tags are present for the operation, similar services will be created for each tag. Operation with `tags: [Foo, Bar]` will generate `services/FooService.ts` and `services/BarService.ts`.
+        - If there are no tags for the operation, the services will be created under the `default` tag. Operation with empty `tags: []` will generate `services/DefaultService.ts`.
+        - If `tags` are used as the base name, operation names will be generated based on the `operationId` from the
+          OpenAPI Operation, or from the path if `operationId` is not provided.
+          You can use `--operation-name-modifier` to customize the operation names.
 - **`--explicit-import-extensions`:** Include explicit `.js` extensions in all import statements. Ideal for projects using ECMAScript modules when TypeScript's _--moduleResolution_ is `node16` or `nodenext` _(optional)_.
 - **`--file-header <string>`:** Add a custom header to each generated file, useful for disabling linting rules or adding file
   comments _(optional)_.
