docs(website): update `fetchInfiniteQuery` and `fetchQuery` pages

--- a/website/docs/query-client/fetchInfiniteQuery.mdx
+++ b/website/docs/query-client/fetchInfiniteQuery.mdx
@@ -35,6 +35,7 @@ const result = api.<service>.<operation>.fetchInfiniteQuery(
        - The function should be provided, otherwise it will throw an error if default `queryFn` is not set previously using `QueryClient.setDefaultOptions(...)` method
      - `baseUrl?: string`
        - **Optional**, the base URL of the API
+   - `...fetchInfiniteQueryOptions?: FetchInfiniteQueryOptions`
      - **Optional**, represents the rest options of the [_fetchInfiniteQuery(...) 🌴_](https://tanstack.com/query/latest/docs/reference/QueryClient#queryclientfetchinfinitequery) method
        - `queryOptions.queryFn` could be provided instead of ~~`requestFn`~~
        - `queryOptions.queryKey` could be provided instead of ~~`parameters`~~
