docs(website): add `ensureInfiniteQueryData` and `ensureQueryData` pages

--- a/website/docs/overview.mdx
+++ b/website/docs/overview.mdx
@@ -173,6 +173,8 @@ hooks with strictly-typed parameters.
 - [x] [`fetchInfiniteQuery(...)`](/query-client/fetchInfiniteQuery.mdx)
 - [x] [`prefetchQuery(...)`](/query-client/prefetchQuery.mdx)
 - [x] [`prefetchInfiniteQuery(...)`](/query-client/prefetchInfiniteQuery.mdx)
+- [x] [`ensureQueryData(...)`](/query-client/ensureQueryData.mdx)
+- [x] [`ensureInfiniteQueryData(...)`](/query-client/ensureInfiniteQueryData.mdx)
 - [x] [`getQueryData(...)`](/query-client/getQueryData.mdx)
 - [x] [`getQueriesData(...)`](/query-client/getQueriesData.mdx)
 - [x] [`setQueryData(...)`](/query-client/setQueryData.mdx)
