docs(website): improve writing

--- a/website/docs/getting-started/installation.mdx
+++ b/website/docs/getting-started/installation.mdx
@@ -4,8 +4,9 @@ sidebar_position: 1
 
 # Installation
 
-Before you start using OpenAPI Qraft, you need to install the CLI tool to generate the API client.
-You also need to install the Qraft Client React package to use the generated API client.
+To start using OpenAPI Qraft, you'll need to install two packages:
+1. The CLI tool for generating the API client
+2. The Qraft Client React package for using the generated API client
 
 ```bash npm2yarn
 npm install -D @openapi-qraft/cli@next
@@ -14,8 +15,8 @@ npm install @openapi-qraft/react@next
 
 :::info Peer Dependency
 
-If you are not already using **TanStack Query v5**, you need to
-[install](https://tanstack.com/query/latest/docs/framework/react/installation) it as well:
+If you're not already using **TanStack Query v5**, you'll need to
+[install](https://tanstack.com/query/latest/docs/framework/react/installation) it separately:
 
 ```bash npm2yarn
 npm install @tanstack/react-query
@@ -25,8 +26,8 @@ npm install @tanstack/react-query
 
 ## Requirements 🌴
 
-OpenAPI Qraft is compatible with React v18+ and works with ReactDOM and React Native.
-Browser support is consistent with TanStack Query:
+OpenAPI Qraft is compatible with React v18+ and works with both ReactDOM and React Native.
+The browser support aligns with TanStack Query's requirements:
 
 ```text
 Chrome >= 91
