--- a/website/docs/overview.mdx
+++ b/website/docs/overview.mdx
@@ -7,24 +7,24 @@ import TabItem from '@theme/TabItem';
 
 # Overview
 
-Meet **OpenAPI Qraft**: your go-to library for crafting type-safe API Hooks for React apps from
+**OpenAPI Qraft** is a powerful library for creating type-safe API Hooks in React applications from
 [OpenAPI Documents](https://learn.openapis.org/).
-By leveraging **TanStack Query v5**, it introduces a smart Proxy-based API client design to seamlessly generate custom
-hooks with strictly-typed parameters.
+Built on top of **TanStack Query v5**, it implements an intelligent Proxy-based API client design that generates
+custom hooks with strict typing.
 
 ## Features
 
-- **Type-safe API Requests:** Utilize TypeScript for type-safe API requests, reducing runtime errors and improving
+- **Type-safe API Requests:** Leverage TypeScript for type-safe API requests, minimizing runtime errors and enhancing
   developer experience.
-- **Modular Design:** Customize the utility with a set of callbacks to handle API calls according to your project's
-  needs.
-- **Integration with [TanStack Query v5](https://tanstack.com/query/v5):** Seamlessly integrate with _TanStack Query_
-  for handling server state, caching, and data synchronization.
-- **Dynamic Proxy-Based Hooks:** Automatically generate React Query hooks for your API endpoints without manual
-  boilerplate.
-- **SSR Support:** OpenAPI Qraft fully supports Server-Side Rendering (SSR)
-  [at the same level](https://tanstack.com/query/latest/docs/framework/react/guides/advanced-ssr)
-  as TanStack Query, including support for Next.js `/app` directory.
+- **Modular Design:** Customize the library using callbacks to handle API calls according to your project's
+  specific requirements.
+- **Integration with [TanStack Query v5](https://tanstack.com/query/v5):** Seamless integration with _TanStack Query_
+  for efficient server state management, caching, and data synchronization.
+- **Dynamic Proxy-Based Hooks:** Generate React Query hooks for your API endpoints automatically without manual
+  boilerplate code.
+- **SSR Support:** Full Server-Side Rendering (SSR) support
+  [matching the capabilities](https://tanstack.com/query/latest/docs/framework/react/guides/advanced-ssr)
+  of TanStack Query, including Next.js `/app` directory compatibility.
 
 ## Fast Run
 
