docs(website): update docs

--- a/website/docs/codegen/CLI/cli.mdx
+++ b/website/docs/codegen/CLI/cli.mdx
@@ -20,7 +20,7 @@ which is a powerful tool for generating types from an OpenAPI schema.
 If you missed the [installation](/getting-started/installation.mdx) step, you can install the `@openapi-qraft/cli` using the following command:
 
 ```bash npm2yarn
-npm install -D @openapi-qraft/cli@next
+npm install -D @openapi-qraft/cli
 ```
 
 :::
