--- a/website/docs/getting-started/installation.mdx
+++ b/website/docs/getting-started/installation.mdx
@@ -9,8 +9,8 @@ To start using OpenAPI Qraft, you'll need to install two packages:
 2. The Qraft Client React package for using the generated API client
 
 ```bash npm2yarn
-npm install -D @openapi-qraft/cli@next
-npm install @openapi-qraft/react@next
+npm install -D @openapi-qraft/cli
+npm install @openapi-qraft/react
 ```
 
 :::info Peer Dependency
