--- a/website/docs/overview.mdx
+++ b/website/docs/overview.mdx
@@ -90,8 +90,8 @@ custom hooks with strict typing.
     **Installation**:
 
     ```bash npm2yarn
-    npm install @openapi-qraft/react@next
-    npm install -D @openapi-qraft/cli@next
+    npm install @openapi-qraft/react
+    npm install -D @openapi-qraft/cli
     # If you have not yet installed TanStack Query:
     npm install @tanstack/react-query
     ```
