fix: documentation according to `editorconfig-checker` reports

--- a/website/versioned_docs/version-1.x/query-client/getMutationKey.mdx
+++ b/website/versioned_docs/version-1.x/query-client/getMutationKey.mdx
@@ -15,10 +15,10 @@ qraft.<service>.<operation>.getMutationKey(parameters)
 
 ### Arguments
 
-1. - `parameters: { path, query, header } | undefined`
-     - **Optional**, OpenAPI request parameters for the mutation, strictly-typed ✨
-     - `parameters` will be used to generate the `MutationKey`
-     - If not specified, returns a `MutationKey` with `{}` as a _Mutation_ parameters
+1.  `parameters: { path, query, header } | undefined`
+    - **Optional**, OpenAPI request parameters for the mutation, strictly-typed ✨
+    - `parameters` will be used to generate the `MutationKey`
+    - If not specified, returns a `MutationKey` with `{}` as a _Mutation_ parameters
 
 ### Returns
 
