--- a/website/versioned_docs/version-1.x/query-client/getQueryKey.mdx
+++ b/website/versioned_docs/version-1.x/query-client/getQueryKey.mdx
@@ -16,10 +16,10 @@ const queryKey = qraft.<service>.<operation>.getQueryKey(parameters);
 
 ### Arguments
 
-1. - `parameters: { path, query, header } | undefined`
-     - **Optional**, OpenAPI request parameters for the query, strictly-typed ✨
-     - `parameters` will be used to generate the `QueryKey`
-     - If not specified, returns a `QueryKey` with `{}` as a _Query_ parameters
+1.  `parameters: { path, query, header } | undefined`
+    - **Optional**, OpenAPI request parameters for the query, strictly-typed ✨
+    - `parameters` will be used to generate the `QueryKey`
+    - If not specified, returns a `QueryKey` with `{}` as a _Query_ parameters
 
 ### Returns
 
