--- a/website/versioned_docs/version-1.x/query-client/getInfiniteQueryKey.mdx
+++ b/website/versioned_docs/version-1.x/query-client/getInfiniteQueryKey.mdx
@@ -14,10 +14,10 @@ const queryKey = qraft.<service>.<operation>.getInfiniteQueryKey(parameters);
 
 ### Arguments
 
-1. - `parameters: { path, query, header } | QueryKey | {}`
-     - **Required**, OpenAPI request parameters for the query, strictly-typed ✨
-     - `parameters` will be used to generate the `QueryKey`
-     - If operation does not require parameters, you must pass an empty object `{}` for strictness
+1.  `parameters: { path, query, header } | QueryKey | {}`
+    - **Required**, OpenAPI request parameters for the query, strictly-typed ✨
+    - `parameters` will be used to generate the `QueryKey`
+    - If operation does not require parameters, you must pass an empty object `{}` for strictness
 
 ### Returns
 
